discussion/kv_engine/158414/158414_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47197: Use resource constraints from cbsaslpw.json [3/n]

The current patch removes the file entries used in the prototype
and pick the limits provided in cbsaslpw.json.

NOTE: This patch only replace the existing feature, and does
      NOT update the limits when the user reloads the database

Change-Id: Iffc6df92005caf475b0b89b8e06c3fd87c1380bc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-29 11:18:16.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 12:00:11.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10935/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:22: error: no member named "server" in namespace "cb::sasl"; did you mean "servent"? [clang-diagnostic-error]
    auto userentry = cb::sasl::server::getUser(ident);
                     ^~~~~~~~~~~~~~~~
                     servent
/usr/include/netdb.h:255:8: note: "servent" declared here
struct servent
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:40: error: no member named "getUser" in "servent" [clang-diagnostic-error]
    auto userentry = cb::sasl::server::getUser(ident);
                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10935/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:22:
error: no member named "server" in namespace "cb::sasl"; did you mean "servent"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10935/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32531/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/tenant_manager.cc:70:22:
error: no member named "server" in namespace "cb::sasl"; did you mean "servent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32531/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12523/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12523/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13056/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9598/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38153/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/538/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11638/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/552/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12704/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20604/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
